--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "crypto-js": "^4.2.0",
+    "cryptojs": "^2.5.3",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
